feature: add facebook login, jwt authorization and user initial info storing to DB (#14)
* [WIP]: add facebook login and initial user data to DB

* WIP: some tests and refactoring

* add jwt authentication and tests

* fix tests

* refactor code and other minor improvements regarding PR comments

* additional minor refactoring
